[package]
name = "pulsar-load-shed-repro"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "net",
    "time",
] }
bb8 = "0.8.5"
bb8-redis = "0.16.0"
redis = "0.26"
futures = "0.3.31"
uuid = { version = "1.3.0", features = ["v4"] }

# pulsar = "6.3"
# We need https://github.com/streamnative/pulsar-rs/pull/337
pulsar = { git = "https://github.com/streamnative/pulsar-rs.git" }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
